<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/productMainPictureImageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/half_margin"
        android:background="@drawable/shape_rect_blue_border"
        android:scaleType="centerCrop" />

    <ImageView
        android:id="@+id/emptyThumbnailImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:src="@drawable/ic_photo_camera_black_36dp" />

    <TextView
        android:id="@+id/productMainPictureHintTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emptyThumbnailImageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/half_margin"
        android:text="@string/create_product__image_hint" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/nextButton"
        android:layout_below="@+id/productMainPictureImageView"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/half_margin"
            android:background="@drawable/shape_rect_blue_border"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/half_margin"
                android:src="@drawable/ic_photo_camera_black_36dp"
                android:text="@string/create_product__add_more_image_hint"
                android:textColor="@color/colorTextSecondary" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/half_margin">

                <Button
                    android:id="@+id/addMorePicturesButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_product__add_more_image" />

                <TextView
                    android:id="@+id/addedPicturesCountTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/half_margin" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/half_margin"
            android:background="@drawable/shape_rect_blue_border"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/half_margin"
                android:src="@drawable/ic_photo_camera_black_36dp"
                android:text="@string/create_product__name_hint"
                android:textColor="@color/colorTextSecondary" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <EditText
                android:id="@+id/productNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/half_margin" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/nextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:text="@string/create__next" />
</RelativeLayout>
