<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/half_margin"
                android:background="@drawable/shape_rect_blue_border"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/half_margin"
                    android:text="@string/create_product__category_hint"
                    android:textColor="@color/colorTextSecondary" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray" />

                <Spinner
                    android:id="@+id/categorySpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/half_margin"
                android:background="@drawable/shape_rect_blue_border"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/half_margin"
                    android:text="@string/create_product__country_hint"
                    android:textColor="@color/colorTextSecondary" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray" />

                <Spinner
                    android:id="@+id/countrySpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/half_margin"
                android:background="@drawable/shape_rect_blue_border"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/half_margin"
                    android:text="@string/create_product__quantity_hint"
                    android:textColor="@color/colorTextSecondary" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray" />

                <com.xavier.daigoufyp.view.CustomSpinnerView
                    android:id="@+id/quantitySpinnerView"
                    android:layout_width="match_parent"
                    android:layout_height="50dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/half_margin"
                android:background="@drawable/shape_rect_blue_border"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/half_margin"
                    android:text="@string/create_product__price_hint"
                    android:textColor="@color/colorTextSecondary" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="@dimen/half_margin"
                        android:text="@string/product__price_unit" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@android:color/darker_gray" />

                    <EditText
                        android:id="@+id/priceEditText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/colorAccent"
                        android:background="@android:color/transparent"
                        android:cursorVisible="false"
                        android:gravity="center"
                        android:inputType="number"
                        android:padding="@dimen/half_margin" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/half_margin"
                android:background="@drawable/shape_rect_blue_border"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/half_margin"
                    android:text="@string/create_product__duration_hint"
                    android:textColor="@color/colorTextSecondary" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray" />

                <com.xavier.daigoufyp.view.TimeChooserView
                    android:id="@+id/timeChooserView"
                    android:layout_width="match_parent"
                    android:layout_height="80dp" />
            </LinearLayout>

            <Button
                android:id="@+id/createProductButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_product__create_product" />
        </LinearLayout>
    </ScrollView>


</RelativeLayout>