<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <EditText
        android:id="@+id/weekEditText"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:cursorVisible="false"
        android:gravity="center"
        android:inputType="number"
        android:maxLength="2"
        android:padding="@dimen/half_margin"
        android:textAppearance="@style/TextAppearanceLarge"
        android:textColor="@color/colorAccent" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="@dimen/half_margin"
        android:text="@string/create_product__week_unit"
        android:textAppearance="@style/TextAppearanceSmall" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray" />

    <EditText
        android:id="@+id/dayEditText"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:cursorVisible="false"
        android:gravity="center"
        android:inputType="number"
        android:maxLength="2"
        android:padding="@dimen/half_margin"
        android:textAppearance="@style/TextAppearanceLarge"
        android:textColor="@color/colorAccent" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="@dimen/half_margin"
        android:text="@string/create_product__day_unit"
        android:textAppearance="@style/TextAppearanceSmall" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray" />

    <EditText
        android:id="@+id/hourEditText"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:cursorVisible="false"
        android:gravity="center"
        android:inputType="number"
        android:maxLength="2"
        android:padding="@dimen/half_margin"
        android:textAppearance="@style/TextAppearanceLarge"
        android:textColor="@color/colorAccent" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="@dimen/half_margin"
        android:text="@string/create_product__hour_unit"
        android:textAppearance="@style/TextAppearanceSmall" />
</LinearLayout>